[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/ladybug/ladyBug.png" type="Texture" id=1]
[ext_resource path="res://assets/ladybug/ladyBug_walk.png" type="Texture" id=2]
[ext_resource path="res://enemies/LadyBug.gd" type="Script" id=3]


[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29, 11.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 29.0376, 17.0828 )

[sub_resource type="Animation" id=4]
resource_name = "DeathAnimation"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -60 ), Vector2( 0, -60 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 180.0 ]
}

[node name="LadyBug" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
playing = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBox"]
position = Vector2( 0, -10 )
polygon = PoolVector2Array( 26.601, 4.27711, 21.0028, -0.557533, 16.1498, -4.11641, 12.784, -5.98095, 8.17834, -6.71367, 1.68855, -7.23703, -3.02179, -6.29497, -7.14462, -5.08701, -10.7035, -2.82227, -13.2918, -0.881073, -15.88, 1.7072, -17.2575, 4.27711 )

[node name="KillZone" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2( 0.263519, 5.9528 )
shape = SubResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0.922073, 0 )
shape = SubResource( 3 )

[node name="DeathAnimation" type="AnimationPlayer" parent="."]
anims/DeathAnimation = SubResource( 4 )
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_entered" from="KillZone" to="." method="_on_KillZone_body_entered"]
[connection signal="animation_finished" from="DeathAnimation" to="." method="_on_DeathAnimation_animation_finished"]
